--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,15 @@
 cmake_minimum_required(VERSION 3.16...3.21)
 
-# Change obs-plugintemplate to your plugin's name in a machine-readable format (e.g.:
-# obs-myawesomeplugin) and set
 project(obs-tapgame VERSION 0.1.0)
 add_library(${CMAKE_PROJECT_NAME} MODULE)
 
-# Replace `Your Name Here` with the name (yours or your organization's) you want to see as the
-# author of the plugin (in the plugin's metadata itself and in the installers)
 set(PLUGIN_AUTHOR "Boris Resnick")
-
-# Replace 'https://www.example.com` with a link to the website of your plugin or repository
-set(PLUGIN_WEBSITE "https://www.example.com")
+set(PLUGIN_WEBSITE "https://www.adsight.tech")
 
 # Replace `com.example.obs-plugin-template` with a unique Bundle ID for macOS releases (used both in
 # the installer and when submitting the installer for notarization)
 set(MACOS_BUNDLEID "com.example.${CMAKE_PROJECT_NAME}")
 
-# Replace `me@contoso.com` with the maintainer email address you want to put in Linux packages
 set(LINUX_MAINTAINER_EMAIL "b.reznik@adsight.tech")
 
 # Add your custom source files here - header files are optional and only required for visibility
