Added statis OpenSSL linkage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,14 @@ configure_file(src/plugin-macros.h.in ${CMAKE_SOURCE_DIR}/src/plugin-macros.gene
 
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-macros.generated.h)
 
+set(OPENSSL_USE_STATIC_LIBS TRUE)
+add_subdirectory("vendor/openssl-cmake")
+set(OPENSSL_SSL_LIBRARY ssl)
+set(OPENSSL_CRYPTO_LIBRARY crypto)
+set(OPENSSL_INCLUDE_DIR "${openssl_BINARY_DIR}/include" "${openssl_BINARY_DIR}")
+set(OPENSSL_FOUND ON)
+message(STATUS "Build OpenSSL: ${openssl_BINARY_DIR}")
+
 # /!\ TAKE NOTE: No need to edit things past this point /!\
 
 # --- Platform-independent build settings ---
